title and content updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Applied Task</title>
     <script src="uikit/dist/js/uikit-icons.min.js"></script>
     <link
       rel="stylesheet"
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <p class="discount">20% OFF Sitewide until 9/12</p>
+      <p class="discount">20% Off Sitewide until 9/12</p>
       <nav>
         <span class="menu" uk-icon="menu"></span>
         <a href=""><img class="logo" src="./images/LOGO.png" alt="" /></a>
